apps/syncthing/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  namespace: syncthing
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      enableServiceLinks: false
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: syncthing
          image: syncthing/syncthing:latest
          ports:
            - containerPort: 8384
            - containerPort: 22000
              protocol: TCP
            - containerPort: 22000
              protocol: UDP
            - containerPort: 21027
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /var/syncthing/config
            - name: documents
              mountPath: /documents
            - name: musik
              mountPath: /musik
            - name: macbook
              mountPath: /macbook
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 128Mi
              cpu: "10m"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: syncthing-config
        - name: documents
          persistentVolumeClaim:
            claimName: syncthing-documents
        - name: musik
          persistentVolumeClaim:
            claimName: syncthing-musik
        - name: macbook
          persistentVolumeClaim:
            claimName: syncthing-macbook
