apps/syncthing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing
  namespace: syncthing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: authelia-authelia@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: syncthing.sanxer.dk
      http:
        paths:
          - backend:
              service:
                name: syncthing
                port:
                  number: 8384
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - syncthing.sanxer.dk
      secretName: syncthing-tls
